--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "html-pdf": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
